[package]
name = "apprunner"
version = "0.1.0"
authors = ["Jeffery Stager <jffry09@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c       = { path = "../c" }
lstd    = { path = "../lstd" }
tortuga = { path = "../tortuga" }
