[package]
name = "tortuga"
version = "0.1.0"
authors = ["Jeffery Stager <jffry09@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["vulkan"]
vulkan = ["vulkan_h", "dl"]

[dependencies]
c        = { path = "../c" }
lstd     = { path = "../lstd" }
vulkan_h = { path = "../vulkan_h", optional = true }
dl       = { path = "../dl", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
xcb_h = { path = "../xcb_h" }
